kubernetes/podsecurity-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: psa-staging
  labels:
    pod-security.kubernetes.io/enforce: "baseline"
    pod-security.kubernetes.io/enforce-version: "latest"
---
apiVersion: v1
kind: Namespace
metadata:
  name: psa-prod
  labels:
    pod-security.kubernetes.io/enforce: "restricted"
    pod-security.kubernetes.io/enforce-version: "latest"
